--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
             <p class="currently-hours">Hoje</p>
             <section class="messages">
                 <div class="home-msg">
-                    <p id="text-msg-home">Olá, Bom dia segue em anexo seu curriculo.</p>
+                    <p id="text-msg-home">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptates illum quis recusandae cupiditate voluptatum dolore facere sequi eius quae magnam laboriosam molestiae, exercitationem aliquam, magni error in vitae numquam? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur aspernatur vero id odio, quaerat omnis commodi! Mollitia, architecto, sequi ex eos nisi iste quos necessitatibus fugit culpa ipsam odio. Quam?</p>
                     <p class="time-msg">hoje 17:30</p>
                 </div>
                 <div class="to-right">
                     <div class="out-msg">
-                        <p id="text-msg-out">Ok, vou mandar em breve para outras empresas. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum quam voluptate deleniti, ea numquam cum, veritatis libero adipisci accusamus quos quo iusto est vel atque inventore sit distinctio! Nesciunt, dolorum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos voluptatum sapiente minima maiores placeat exercitationem eum sit ducimus corporis, nulla expedita, autem, optio ea error veritatis. Corporis harum iure eaque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, quod odit architecto error adipisci harum ratione iste aspernatur officia deleniti maiores commodi illum, corrupti facere enim facilis nobis perspiciatis ullam.</p>
+                        <p id="text-msg-out">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum quam voluptate deleniti, ea numquam cum, veritatis libero adipisci accusamus quos quo iusto est vel atque inventore sit distinctio! Nesciunt, dolorum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos voluptatum sapiente minima maiores placeat exercitationem eum sit ducimus corporis, nulla expedita, autem, optio ea error veritatis. Corporis harum iure eaque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, quod odit architecto error adipisci harum ratione iste aspernatur officia deleniti maiores commodi illum, corrupti facere enim facilis nobis perspiciatis ullam.</p>
                         <p class="time-msg">hoje 17:50</p>
                     </div>
                 </div>
