commit Js aprimorado

--- a/index.html
+++ b/index.html
@@ -24,19 +24,8 @@
             <div class="waring">
                 <p>Digite um texto na área cinza e envie sua mensagem clicando no botão verde.</p>
             </div>
-            <p class="currently-hours">Hoje</p>
-            <section class="messages">
-                <div class="home-msg">
-                    <p id="text-msg-home">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptates illum quis recusandae cupiditate voluptatum dolore facere sequi eius quae magnam laboriosam molestiae, exercitationem aliquam, magni error in vitae numquam? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur aspernatur vero id odio, quaerat omnis commodi! Mollitia, architecto, sequi ex eos nisi iste quos necessitatibus fugit culpa ipsam odio. Quam?</p>
-                    <p class="time-msg">hoje 17:30</p>
-                </div>
-                <div class="to-right">
-                    <div class="out-msg">
-                        <p id="text-msg-out">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum quam voluptate deleniti, ea numquam cum, veritatis libero adipisci accusamus quos quo iusto est vel atque inventore sit distinctio! Nesciunt, dolorum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos voluptatum sapiente minima maiores placeat exercitationem eum sit ducimus corporis, nulla expedita, autem, optio ea error veritatis. Corporis harum iure eaque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, quod odit architecto error adipisci harum ratione iste aspernatur officia deleniti maiores commodi illum, corrupti facere enim facilis nobis perspiciatis ullam.</p>
-                        <p class="time-msg">hoje 17:50</p>
-                    </div>
-                </div>
-            </section>            
+            <p class="currently-day">Hoje</p>
+            <!--Gera Mensagens-->
         </section>
         <section class="send-message">
             <input type="text" name="typer" id="typer" placeholder="Digite sua mensagem aqui:">
@@ -46,5 +35,6 @@
         </section>
     </main>
     <script src="https://kit.fontawesome.com/32d6f1e6b0.js" crossorigin="anonymous"></script>
+    <script src="script/script.js"></script>
 </body>
 </html>
